--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
             <img class="box3" src="./image1.jpg">
 
             </div>
-        <div class="box4">
-            <p>WE SERVE OUR</p>
-            <p>BEST TO YOU.</p>
-            <p>PLEASE VISIT OUR</p>
-            <p>STORE FOR</p>
-            <p>BETTER DEAL</p>
-            <p>AND PRICE.</p>
+            <div class="middle3">
+                <p>WE SERVE OUR</p><br>
+                <p>BEST TO YOU.</p><br>
+                <p>PLEASE VISIT OUR</p><br>
+                <p>STORE FOR</p><br>
+                <p>BETTER DEAL</p><br>
+                <p>AND PRICE.</p><br>
+              </div>
 
         </div>
         <div class="box5">
